src/objects/ProductRule__c.object
<CustomObject>
    <description>Rule that governs valid product configurations.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that indicates whether this rule is active or inactive.</description>
        <inlineHelpText>Indicates whether this rule is active or inactive.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AdvancedCondition__c</fullName>
        <description>Can only be entered if the Conditions Met is Custom. Enter a combination of the Error Condition Index #s, AND, OR, and parenthesis (e.g. (123 AND 124) AND 125).</description>
        <inlineHelpText>Can only be entered if the Conditions Met is Custom. Enter a combination of the Error Condition Index #s, AND, OR, and parenthesis (e.g. (123 AND 124) AND 125).</inlineHelpText>
        <label>Advanced Condition</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CPQ_Config_Version__c</fullName>
        <label>CPQ Config Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ConditionsMet__c</fullName>
        <description>Choose the behavior for your conditions: All is AND, Any is OR, Custom is a combination of AND/OR.</description>
        <inlineHelpText>Choose the behavior for your conditions: All is AND, Any is OR, Custom is a combination of AND/OR.</inlineHelpText>
        <label>Conditions Met</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Any</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ErrorMessage__c</fullName>
        <description>Enter a message to displayed when rule is activated.  An error message will be displayed when a Validations is fired.  A warning message will be displayed when an Alert is fired. Does not apply to Filter rules.</description>
        <inlineHelpText>Enter a message to displayed when rule is activated.  An error message will be displayed when a Validations is fired.  A warning message will be displayed when an Alert is fired. Does not apply to Filter rules.</inlineHelpText>
        <label>Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EvaluationEvent__c</fullName>
        <description>Event that causes this rule to be evaluated.</description>
        <inlineHelpText>Specify when this rule should be evaluated.</inlineHelpText>
        <label>Evaluation Event</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Load</fullName>
                </value>
                <value>
                    <fullName>Edit</fullName>
                </value>
                <value>
                    <fullName>Save</fullName>
                </value>
                <value>
                    <fullName>Always</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EvaluationOrder__c</fullName>
        <description>Order in which this price rule is evaluated.</description>
        <inlineHelpText>Specify the order of evaluation for this price rule. Higher ordered rules are evaluated last which means they &quot;win&quot; in case of conflict.</inlineHelpText>
        <label>Evaluation Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Old_Version__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is_Old_Version__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Load_Id__c</fullName>
        <externalId>true</externalId>
        <label>Load Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LookupMessageField__c</fullName>
        <description>Field on Lookup Object corresponding to Product Rule Message. Field must be text.</description>
        <inlineHelpText>Field on Lookup Object corresponding to Product Rule Message. Field must be text.</inlineHelpText>
        <label>Lookup Message Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SBQQ__Message__c</fullName>
                </value>
                <value>
                    <fullName>Error_Message__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LookupObject__c</fullName>
        <description>API Name of the Custom Object that stores the lookup data.</description>
        <inlineHelpText>API Name of the Custom Object that stores the lookup data.</inlineHelpText>
        <label>Lookup Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SBQQ__LookupData__c</fullName>
                </value>
                <value>
                    <fullName>Product2</fullName>
                </value>
                <value>
                    <fullName>Inventory__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LookupProductField__c</fullName>
        <description>Field on Lookup Object corresponding to Product Action Product Lookup. Field must be a lookup to the Product object.</description>
        <inlineHelpText>Field on Lookup Object corresponding to Product Action Product Lookup. Field must be a lookup to the Product object.</inlineHelpText>
        <label>Lookup Product Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SBQQ__Product__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LookupRequiredField__c</fullName>
        <description>Field on Lookup Object corresponding to Product Action Required checkbox. Field must be checkbox.</description>
        <inlineHelpText>Field on Lookup Object corresponding to Product Action Required checkbox. Field must be checkbox.</inlineHelpText>
        <label>Lookup Required Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SBQQ__Required__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LookupTypeField__c</fullName>
        <description>Field on Lookup Object corresponding to Product Action Type picklist. Field must be a Picklist or Text.</description>
        <inlineHelpText>Field on Lookup Object corresponding to Product Action Type picklist. Field must be a Picklist or Text.</inlineHelpText>
        <label>Lookup Type Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SBQQ__Type__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scope__c</fullName>
        <description>Scopes the rule to the entire quote or specific product.</description>
        <inlineHelpText>Applies the rule to the entire quote or specific product.</inlineHelpText>
        <label>Scope</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quote</fullName>
                    <default>true</default>
                    <label>Quote</label>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of rule. Validation displays error messages. Selection causes products to be added or suggested. Alert displays a warning, but requires no rectification. Filter refines option lookup results for Dynamic Bundles.</description>
        <inlineHelpText>Type of rule. Validation displays error messages. Selection causes products to be added or suggested. Alert displays a warning, but requires no rectification. Filter refines option lookup results for Dynamic Bundles.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Validation</fullName>
                </value>
                <value>
                    <fullName>Selection</fullName>
                </value>
                <value>
                    <fullName>Alert</fullName>
                </value>
                <value>
                    <fullName>Filter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Product Rule</label>
    <nameField>
        <label>Product Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>